--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,19 @@
+body {
+  font-family: Verdana,sans-serif;
+  font-size:  15px;
+  padding: 10px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    margin: 10px 0;
+}
+
+h1 {
+  font-size: 36px;
+}
+
 #wrapper{
   width: 1300px;
   margin: 0 auto;
