--- a/src/app/reminder-element/reminder-element.component.html
+++ b/src/app/reminder-element/reminder-element.component.html
@@ -1,11 +1,22 @@
-<mat-card>
-  <mat-card-subtitle>{{reminderElement.reminderText}}</mat-card-subtitle>
-  <mat-card-content>
-    <p>Created: {{reminderElement.createdDate}}, Due: {{reminderElement.dueDate}}</p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>Done</button>
-    <button mat-button>Edit</button>
-  </mat-card-actions>
-</mat-card>
+<!--<mat-card>-->
+  <!--<mat-card-subtitle>{{reminderElement.reminderText}}</mat-card-subtitle>-->
+  <!--<mat-card-content>-->
+    <!--<p>Created: {{reminderElement.createdDate}}, Due: {{reminderElement.dueDate}}</p>-->
+  <!--</mat-card-content>-->
+  <!--<mat-card-actions>-->
+    <!--<button mat-button>Done</button>-->
+    <!--<button mat-button>Edit</button>-->
+  <!--</mat-card-actions>-->
+<!--</mat-card>-->
 
+<mat-card xmlns:left="http://www.w3.org/1999/xhtml">
+<mat-grid-list cols="12" rowHeight="100px">
+  <mat-grid-tile [colspan]="10" [rowspan]="1">
+    <div style="position: absolute; left: 5px">
+    {{reminderElement.reminderText}}
+    </div>
+  </mat-grid-tile>
+  <mat-grid-tile [colspan]="2" [rowspan]="1"><mat-checkbox></mat-checkbox></mat-grid-tile>
+</mat-grid-list>
+</mat-card>
+<br />
