--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,1 +1,1 @@
-<mat-toolbar>Reminders</mat-toolbar>
+<mat-toolbar color="primary"><a href="reminders/">Reminders</a>&nbsp;&nbsp;&nbsp;<a href="rolodex/">Rolodex</a></mat-toolbar>
