--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
 <body>
 <app-top-bar></app-top-bar>
 <div id="wrapper">
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-<app-reminder-container></app-reminder-container>
+  <router-outlet style="padding: 5px;"></router-outlet>
 </div>
 </body>
