--- a/src/app/reminder-container/reminder-container.component.html
+++ b/src/app/reminder-container/reminder-container.component.html
@@ -1,11 +1,6 @@
 <div *ngFor="let reminderSource of reminderSources">
   <app-reminder-element [reminderElement]="reminderSource._source"></app-reminder-element>
 </div>
-<div layout="row">
-  <div flex>First item in row</div>
-  <div flex>Second item in row</div>
-</div>
-<div layout="column">
-  <div flex>First item in column</div>
-  <div flex>Second item in column</div>
+<div>
+  <app-reminder-add></app-reminder-add>
 </div>
